# ghostcam

./: .air.toml  .dockerignore  .env.example  .gitignore  .pi.env.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  SECURITY.md  arch.md  camera-entrypoint.sh  camera.example.toml  docker-compose.multi.yml  docker-compose.yml  fly.toml  go.mod  go.sum  notes.txt  server.example.toml  tygo.yaml
camera/: .gitignore  Cargo.toml  README.md  abr.go  abr_test.go  audio_silence.go  audio_silence_test.go  battery.go  battery_pisugar_linux.go  battery_pisugar_other.go  battery_rules.go  battery_rules_test.go  bt_onboarding_linux.go  bt_onboarding_other.go  capture.go  client.go  commands.go  config.go  config_test.go  credentials.go  default_battery_rules.go  default_battery_rules_test.go  diag_bundle.go  diag_bundle_test.go  docker-entrypoint.sh  firmware.go  firmware_stability.go  firmware_stability_test.go  ghostcam-camera.service  gpsd.go  gpsd_other.go  identity.go  init_uploader.go  launch-cameras.sh  live_relay.go  live_relay_test.go  live_ws.go  main.go  motion.go  motion_test.go  (+30 more)
camera/ghostcam/: __init__.py  __main__.py  client.py  commands.py  config.py  credentials.py  firmware.py  identity.py  live_relay.py  live_ws.py  main.py  motion.py  power_mode.py  segment_index.py  signing.py  telemetry_poll.py  upload.py  watcher.py
camera/ghostcam/platform/: __init__.py  linux.py  synthetic.py
camera/ghostcam/wire/: __init__.py  telemetry.py  types.py
camera/internal/abr/: abr.go  abr_test.go
camera/internal/audio/: audio_silence.go  audio_silence_test.go
camera/internal/battery/: battery.go  battery_rules.go  battery_rules_test.go  default_battery_rules.go  default_battery_rules_test.go
camera/internal/bt/: bt_onboarding_linux.go  bt_onboarding_other.go  local_http.go  local_http_test.go  provisioning.go  qr_linux.go  qr_other.go
camera/internal/capture/: capture.go  capture_test.go  publisher.go  publisher_test.go
camera/internal/commands/: commands.go  commands_test.go  restart_actions.go
camera/internal/diag/: clbs_probe_linux.go  clbs_probe_other.go  diag_bundle.go  diag_bundle_test.go
camera/internal/firmware/: firmware.go  firmware_stability.go  firmware_stability_test.go
camera/internal/network/: network_cellular.go  network_cellular_test.go  network_linux.go  network_other.go  resolver.go
camera/internal/power/: power_mode.go  power_mode_test.go
camera/internal/sensors/: gpsd.go  gpsd_other.go  nmea.go  nmea_reader_linux.go  nmea_test.go  sensors_cell_location_test.go  sensors_common.go  sensors_linux.go  sensors_modem.go  sensors_modem_linux.go  sensors_modem_other.go  sensors_modem_test.go  sensors_other.go  sensors_uplink_linux.go  sensors_uplink_other.go  sim_imsi_linux.go  sim_imsi_other.go
camera/internal/state/: state.go
camera/internal/telemetry/: telemetry_poll.go
camera/internal/uplink/: uplink.go  uplink_test.go
camera/internal/upload/: init_uploader.go  motion.go  motion_test.go  segment_backlog.go  segment_backlog_test.go  upload.go  upload_test.go  watcher.go
camera/src/: README.md  certs.rs  commands.rs  config.rs  enrollment.rs  firmware.rs  http_client.rs  main.rs  network.rs  provisioning.rs  qr_enrollment.rs  quic.rs  session.rs  tofu.rs  upload.rs
camera/src/capture/: README.md  audio.rs  mod.rs  telemetry.rs  video.rs  video_test.rs
camera/tests/: conftest.py  test_capture.py  test_commands_power.py  test_config.py  test_live_relay.py  test_live_ws.py  test_motion.py  test_motion_gated_upload.py  test_ogg_reader.py  test_power_mode.py  test_public_api.py  test_segment_index.py  test_upload.py  test_watcher.py  test_wire_format.py
ghostcam/: Cargo.toml  README.md
ghostcam-agent/: Cargo.toml
ghostcam-agent/src/: main.rs  quic.rs  stream.rs  test_source.rs
ghostcam-bridge/: Cargo.toml
ghostcam-bridge/src/: api.rs  data_channel.rs  main.rs  quic.rs  router.rs  rtp.rs  webrtc.rs
ghostcam/src/: api_types.rs  audit.rs  command.rs  config.rs  data_channel.rs  firmware.rs  frame.rs  h264.rs  hello.rs  lib.rs  pki.rs  quic.rs  router.rs  rtp.rs  stream.rs  telemetry.rs  types.rs
server/: Cargo.toml  README.md  admin.go  admin_billing.go  admin_cameras.go  admin_users.go  app.go  auth_email_handlers.go  auth_handlers.go  billing.go  cameras.go  clientlog.go  clips.go  config.go  events.go  firmware.go  firmware_test.go  footage.go  footage_test.go  handlers_test.go  health.go  hls.go  integration_test.go  live.go  local_manifest.go  main.go  metrics.go  metrics_test.go  middleware.go  middleware_test.go  pending_sweeper.go  pending_sweeper_test.go  presign.go  provision.go  qr.go  ratelimit.go  ratelimit_test.go  routes.go  runtime_goroutine.go  sse.go  (+5 more)
server-multi/: Cargo.toml  README.md
server-multi/migrations/: 001_initial.sql
server-multi/src/: db.rs  main.rs
server-multi/tests/: db_tests.rs
server-solo/: Cargo.toml  README.md
server-solo/src/: db.rs  main.rs
server-solo/tests/: db_tests.rs
server/apitypes/: apitypes.go
server/auth/: auth.go  auth_test.go  verify.go  verify_test.go
server/billing/: billing_test.go  tiers.go
server/ctxutil/: ctxutil.go
server/db/: admins.go  audit.go  billing.go  cameras.go  commands.go  db.go  email_tokens.go  migrations.go  provision.go  segments.go  sessions.go  support.go  tokens.go  users.go
server/handlers/: admin.go  auth.go  billing.go  camera_telemetry.go  cameras.go  clips.go  events.go  handlers.go  handlers_test.go  health.go  hls.go  hls_test.go  presign.go  provision.go  qr.go  sse.go  telemetry.go  tokens.go
server/linear/: linear.go  linear_test.go
server/mailer/: mailer.go  mailer_test.go  templates.go
server/migrations/: 001_initial.sql  002_multi_user.sql  003_audit_log.sql  005_fk_cascade.sql
server/redis/: events.go  redis.go  telemetry.go  telemetry_test.go
server/s3/: s3.go
server/src/: README.md  api.rs  audit.rs  auth.rs  config.rs  db.rs  db_trait.rs  firmware.rs  frames.rs  main.rs  metrics.rs  quic.rs  s3.rs  sse.rs  webrtc.rs
server/triage/: triage.go  triage_test.go
(+472 files in other folders)
