[package]
name = "camera"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostcam = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
pem = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
