[package]
name = "camera"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostcam = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
toml = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
rqrr = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = "0.15"
opus = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
