[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ghostcam"
version = "0.1.0"
description = "Ghostcam camera daemon — captures H.264 video, uploads MPEG-TS segments, relays live frames to the server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cargocam" }]
dependencies = [
    "pynacl>=1.5",
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
real = [
    # Real-Pi sensors (libzbar0 system package required for pyzbar).
    "pyzbar>=0.1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    # pyzbar has no published type stubs; mypy's ignore_missing_imports
    # below covers it.
]

[project.scripts]
ghostcam-camera = "ghostcam.main:run"

[tool.hatch.build.targets.wheel]
packages = ["ghostcam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
