[package]
name = "ghostcam-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostcam-common = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
