[package]
name = "ghostcam-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostcam-common = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
str0m = { workspace = true }
anyhow = { workspace = true }
