[package]
name = "server-multi"
version = "0.1.0"
edition = "2021"

[dependencies]
server-core = { workspace = true }
ghostcam = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "chrono", "uuid"] }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
