[package]
name = "server-solo"
version = "0.1.0"
edition = "2021"

[dependencies]
server-core = { workspace = true }
ghostcam = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
quinn = { workspace = true }
