[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostcam = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
str0m = { workspace = true }
anyhow = { workspace = true }
prometheus-client = { workspace = true }
