[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostcam = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
governor = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
async-stripe = { workspace = true }
qrcode = "0.14"
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
